--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.3.0'
     implementation 'com.google.firebase:firebase-auth:22.2.0'
     implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.android.material:material:1.5.0'
+
+
+
 
     //Piccasso
     implementation 'com.squareup.picasso:picasso:2.8'
