--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,10 @@ dependencies {
 
     //Piccasso
     implementation 'com.squareup.picasso:picasso:2.8'
-    
+
+    //CardView
+    implementation 'androidx.cardview:cardview:1.0.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 
