Login and Sign Up Part 2 (Check phone Already)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:name=".EditProfileActivity"
             android:exported="false" />
         <activity
+            android:name=".Setting"
+            android:exported="false" />
+        <activity
             android:name=".ExploreFragment"
             android:exported="false" />
         <activity
