--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.Voztify"
         tools:targetApi="31">
         <activity
+            android:name=".LoginWithoutPassWordActivity"
+            android:exported="false" />
+        <activity
             android:name=".AlbumDetailActivity"
             android:exported="false" />
         <activity
@@ -32,7 +35,7 @@
             android:name=".EditProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".Setting"
+            android:name=".SettingActivity"
             android:exported="false" />
         <activity
             android:name=".ExploreFragment"
@@ -48,22 +51,23 @@
             android:exported="false" />
         <activity
             android:name=".Register"
-            android:exported="false" />
+            android:exported="false">
+        </activity>
         <activity
             android:name=".HomeActivity"
-            android:exported="false" />
+            android:exported="true" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
         <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".Login"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
