--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,12 @@
             android:name=".ArtistDetailActivity"
             android:exported="false" />
         <activity
+            android:name=".CreatePlaylistActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PlaylistDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".AlbumDetailActivity"
             android:exported="false" />
         <activity
