--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.Voztify"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityInsertSongPlaylist"
+            android:exported="false" />
+        <activity
             android:name=".LoginWithoutPassWordActivity"
             android:exported="false" />
         <activity
@@ -60,8 +63,7 @@
             android:exported="false" />
         <activity
             android:name=".Login"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".Register"
             android:exported="false" >
@@ -71,7 +73,7 @@
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
