add TrackDetailActivity, TrackResponse, fix bug TrackAdapter, add ArtistDetailActivity to SearchFragment, thêm nút back trên mỗi layout detail.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.Voztify"
         tools:targetApi="31">
         <activity
+            android:name=".TrackDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".ActivityUpdatePlaylist"
             android:exported="false" />
         <activity
